[package]
name = "simple-rt-shader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dependencies.spirv-std]
git = "https://github.com/EmbarkStudios/rust-gpu"
rev = "31bfc338e01c340f9ba3f18b294098a8e529e20c"
features = ["const-generics", "glam"]

