[package]
name = "shader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]


[dependencies.spirv-std]
git = "https://github.com/EmbarkStudios/rust-gpu"
rev = "c3eff4d4a5a52607aa3bc8b4ba8409f6659425ee"
features = ["const-generics", "glam"]

