[package]
name = "simple-rt-shader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]


[dependencies.spirv-std]
git = "https://github.com/EmbarkStudios/rust-gpu"
rev = "8924fe7b4cc552cf764819a028d6c23ad983b3db"
features = ["glam"]

