[package]
name = "simple-rt-shader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies.spirv-builder]
git = "https://github.com/EmbarkStudios/rust-gpu"
rev = "b072b5ebdc23077809763d58ec9bf10a186bb339"
default-features = false
features = ["use-installed-tools", "watch"]
